--- a/web_html.html
+++ b/web_html.html
@@ -16,43 +16,43 @@ title: HTML5
 <p>Do you need more of a head start?  Try building from a <a href="#frameworks">mobile framework</a>.</p>
 <p>&nbsp;</p>
 <h3><a name="frameworks"></a>Mobile Framework Code</h3>
-<p><h5>UCLA Mobile Web Framework</h5>The Mobile Web Framework is a cross-platform web framework that focuses on mobile web standards, semantic markup, device agnosticism and graceful degradation, providing a robust presentation layer that allows applications to define a single set of markup optimized for HTML5 capable devices that degrades gracefully to any HTML 4.01 or XHTML MP compliant device including Blackberry, Windows Mobile and even T9 phones.
+<p><a name="mwf"></a><h5>UCLA Mobile Web Framework</h5>The Mobile Web Framework is a cross-platform web framework that focuses on mobile web standards, semantic markup, device agnosticism and graceful degradation, providing a robust presentation layer that allows applications to define a single set of markup optimized for HTML5 capable devices that degrades gracefully to any HTML 4.01 or XHTML MP compliant device including Blackberry, Windows Mobile and even T9 phones.
 <br>
 <strong>Link:</strong> <a href="https://github.com/ucla/mwf">https://github.com/ucla/mwf</a><br>
 <strong>Source:</strong> Other government
 </p>
-<p><h5>MIT Mobile Web</h5>This is the same code running on http://m.mit.edu/ as of October 2010, minus the mobile device detection server. That will have its own repository on GitHub. The MIT Mobile Web is an open source project released under the MIT License, detailed in the file named LICENSE.
+<p><a name="MIT-Mobile-Web"></a><h5>MIT Mobile Web</h5>This is the same code running on http://m.mit.edu/ as of October 2010, minus the mobile device detection server. That will have its own repository on GitHub. The MIT Mobile Web is an open source project released under the MIT License, detailed in the file named LICENSE.
 <br>
 <strong>Link:</strong> <a href="https://github.com/MIT-Mobile/MIT-Mobile-Web">https://github.com/MIT-Mobile/MIT-Mobile-Web</a><br>
 <strong>Source:</strong> Third party
 </p>
-<p><h5>Junior</h5>A front-end framework for building HTML5 mobile apps with a native look and feel.<br>
+<p><a name="junior"></a><h5>Junior</h5>A front-end framework for building HTML5 mobile apps with a native look and feel.<br>
 <strong>Link:</strong> <a href="http://justspamjustin.github.com/junior/#home">http://justspamjustin.github.com/junior/#home</a><br>
 <strong>Source:</strong> Third party
 </p>
-<p><h5>HTML5 Boilerplate</h5>A front-end template for building "fast, robust, and adaptable" web apps or sites.<br>
+<p><a name="html5boilerplate"></a><h5>HTML5 Boilerplate</h5>A front-end template for building "fast, robust, and adaptable" web apps or sites.<br>
 <strong>Link:</strong> <a href="http://html5boilerplate.com/">http://html5boilerplate.com/</a><br>
 <strong>Source:</strong> Third party
 </p>
 
-<p><h5>Bootstrap</h5>Sleek, intuitive, and powerful front-end framework for faster and easier web development.<br>
+<p><a name="bootstrap"></a><h5>Bootstrap</h5>Sleek, intuitive, and powerful front-end framework for faster and easier web development.<br>
 <strong>Link:</strong> <a href="http://twitter.github.io/bootstrap/">http://twitter.github.io/bootstrap/</a><br>
 <strong>Source:</strong> Third party
 </p>
 
 
 <h3><a name="modular"></a>Modular Code</h3>
-<p><h5>Leaflet</h5>Leaflet is a modern open-source JavaScript library for mobile-friendly interactive maps. It is developed by Vladimir Agafonkin of CloudMade with a team of dedicated contributors. Weighing just about 27 KB of gzipped JS code, it has all the features most developers ever need for online maps.<br>
+<p><a name="Leaflet"></a><h5>Leaflet</h5>Leaflet is a modern open-source JavaScript library for mobile-friendly interactive maps. It is developed by Vladimir Agafonkin of CloudMade with a team of dedicated contributors. Weighing just about 27 KB of gzipped JS code, it has all the features most developers ever need for online maps.<br>
 <strong>Link:</strong> <a href="https://github.com/nationalparkservice/Leaflet">https://github.com/nationalparkservice/Leaflet</a><br>
 <strong>Source:</strong> Federal
 </p>
-<p><h5>Web Experience Toolkit (WET)</h5>Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities.
+<p><a name="wet-boew"></a><h5>Web Experience Toolkit (WET)</h5>Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities.
 The toolkit complies with the new Standards on Web Accessibility and Web Usability; the toolkit will also ease compliance with the Standard on Web Interoperability. WET is highly recommended for use on Government of Canada Websites.
 <br>
 <strong>Link:</strong> <a href="https://github.com/wet-boew/wet-boew">https://github.com/wet-boew/wet-boew</a><br>
 <strong>Source:</strong> Other government
 </p>
-<p><h5>jQuery Mobile</h5>A unified, HTML5-based user interface system for all popular mobile device platforms, built on the jQuery and jQuery UI foundation. Its lightweight code is built with progressive enhancement, and has a flexible, easily themeable design.<br>
+<p><a name="jquery-mobile"></a><h5>jQuery Mobile</h5>A unified, HTML5-based user interface system for all popular mobile device platforms, built on the jQuery and jQuery UI foundation. Its lightweight code is built with progressive enhancement, and has a flexible, easily themeable design.<br>
 <strong>Link:</strong> <a href="https://github.com/jquery/jquery-mobile">https://github.com/jquery/jquery-mobile</a><br>
 <strong>Source:</strong> Third party
 </p>
