--- a/web_php.html
+++ b/web_php.html
@@ -16,19 +16,19 @@ title: Web - PHP
 <p>Do you need more of a head start?  Try building from a <a href="#frameworks">mobile framework</a> or try customizing one of the <a href="#complete">complete apps</a> to fit your needs.</p>
 <p>&nbsp;</p>
 <h3><a name="frameworks"></a>Mobile Framework Code for PHP</h3>
-<p><h5>Kurogo Mobile Web</h5>Kurogo is a PHP framework for delivering high quality, data driven customizable content to a wide range of mobile devices. Its strengths lie in the customizable system that allows you to adapt content from a variety of sources and easily present that to mobile devices from feature phones, to early generation smart phones, to modern devices and tablets.<br>
+<p><a name="Kurogo-Mobile-Web"></a><h5>Kurogo Mobile Web</h5>Kurogo is a PHP framework for delivering high quality, data driven customizable content to a wide range of mobile devices. Its strengths lie in the customizable system that allows you to adapt content from a variety of sources and easily present that to mobile devices from feature phones, to early generation smart phones, to modern devices and tablets.<br>
 <strong>Link:</strong> <a href="https://github.com/modolabs/Kurogo-Mobile-Web">https://github.com/modolabs/Kurogo-Mobile-Web</a><br>
 <strong>Source:</strong> Third party
 </p>
 
 <h3><a name="modular"></a>Modular Code for PHP</h3>
-<p><h5>Federal API SDK</h5>PHP SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/PHP_DOLDataSDK/wiki">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
+<p><a name="PHP_DOLDataSDK"></a><h5>Federal API SDK</h5>PHP SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/PHP_DOLDataSDK/wiki">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/PHP_DOLDataSDK">https://github.com/USDepartmentofLabor/PHP_DOLDataSDK</a><br>
 <strong>Source:</strong> Federal
 </p>
 
 <h3><a name="complete"></a>Complete Apps</h3>
-<p><h5>USA.gov FAQs API &amp; Mobile App</h5>This app includes an importer/parser for the XML feed of FAQs from USA.gov (<a href="http://answers.usa.gov">answers.usa.gov</a>) as well as a RESTful API interface and a mobile HTML5 UI based on that API.
+<p><a name="usa-faqs"></a><h5>USA.gov FAQs API &amp; Mobile App</h5>This app includes an importer/parser for the XML feed of FAQs from USA.gov (<a href="http://answers.usa.gov">answers.usa.gov</a>) as well as a RESTful API interface and a mobile HTML5 UI based on that API.
 A working demo of this codebase can be seen at <a href="http://usa-faq.civicagency.org">http://usa-faq.civicagency.org</a> and the API documentation can be seen at <a href="http://usa-faq.civicagency.org/api">http://usa-faq.civicagency.org/api</a>.
 <br>
 <strong>Link:</strong> <a href="https://github.com/GSA-OCSIT/usa-faqs">https://github.com/GSA-OCSIT/usa-faqs</a><br>
