--- a/web_ruby.html
+++ b/web_ruby.html
@@ -16,11 +16,11 @@ title: Web - Ruby
 <!--<p>Do you need more of a head start?  Try customizing one of the <a href="#complete">complete apps</a> to fit your needs.</p>-->
 <p>&nbsp;</p>
 <h3><a name="modular"></a>Modular Code for Ruby</h3>
-<p><h5>Mobile Fu</h5>Want to automatically detect mobile devices that access your Rails application? Mobile Fu allows you to do just that. People can access your site from a Palm, Blackberry, iPhone, iPad, Nokia, etc. and it will automatically adjust the format of the request from :html to :mobile.<br>
+<p><a name="mobile-fu"></a><h5>Mobile Fu</h5>Want to automatically detect mobile devices that access your Rails application? Mobile Fu allows you to do just that. People can access your site from a Palm, Blackberry, iPhone, iPad, Nokia, etc. and it will automatically adjust the format of the request from :html to :mobile.<br>
 <strong>Link:</strong> <a href="https://github.com/GSA-OCSIT/mobile-fu">https://github.com/GSA-OCSIT/mobile-fu</a><br>
 <strong>Source:</strong> Federal
 </p>
-<p><h5>Federal API SDK</h5>Ruby SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/Ruby_DOLDataSDK/wiki">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
+<p><a name="Ruby_DOLDataSDK"></a><h5>Federal API SDK</h5>Ruby SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/Ruby_DOLDataSDK/wiki">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/Ruby_DOLDataSDK">https://github.com/USDepartmentofLabor/Ruby_DOLDataSDK</a><br>
 <strong>Source:</strong> Federal
 </p>
