--- a/native_blackberry.html
+++ b/native_blackberry.html
@@ -16,19 +16,19 @@ title: Native Blackberry
 <p>Do you need more of a head start?  Try customizing one of the <a href="#complete">complete apps</a> to fit your needs or dive into some <a href="#etc">other resources</a>.</p>
 <p>&nbsp;</p>
 <h3><a name="modular"></a>Modular Code for Blackberry</h3>
-<p><h5>Federal API SDK</h5>Blackberry SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/BlackBerry_DOLDataSDK/wiki">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
+<p><a name="BlackBerry_DOLDataSDK"></a><h5>Federal API SDK</h5>Blackberry SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/BlackBerry_DOLDataSDK/wiki">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/BlackBerry_DOLDataSDK">https://github.com/USDepartmentofLabor/BlackBerry_DOLDataSDK</a><br>
 <strong>Source:</strong> Federal
 </p>
 
 <h3><a name="complete"></a>Complete Apps</h3>
-<p><h5>OSHA Heat Safety</h5>This app allows workers and supervisors to calculate the heat index for their worksite, and, based on the heat index, displays a risk level to outdoor workers.<br>
+<p><a name="OSHA-Heat-Safety-Blackberry"></a><h5>OSHA Heat Safety</h5>This app allows workers and supervisors to calculate the heat index for their worksite, and, based on the heat index, displays a risk level to outdoor workers.<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/OSHA-Heat-Safety-Blackberry">https://github.com/USDepartmentofLabor/OSHA-Heat-Safety-Blackberry</a><br>
 <strong>Source:</strong> Federal
 </p>
 
 <h3><a name="etc"></a>Etc</h3>
-<p><h5>Blackberry github Repositories &amp; Samples</h5>Projects in the BlackBerry Organization at GitHub fall into one of the following categories: BlackBerry-led Projects or BlackBerry-sponsored Projects.</p>
+<p><a name="blackberry"></a><h5>Blackberry github Repositories &amp; Samples</h5>Projects in the BlackBerry Organization at GitHub fall into one of the following categories: BlackBerry-led Projects or BlackBerry-sponsored Projects.</p>
 <p><strong>BlackBerry-Led Projects - </strong>These are projects for which BlackBerry sets the direction, assigning the technical leader, allocating development resources and driving decisions like the release schedule and key features. Development in these projects is transparent, and we welcome contributions.</p>
 <p><strong>BlackBerry-Sponsored Projects - </strong>These are non-BlackBerry-led Open Source projects in which BlackBerry participates actively. Some projects are transient; for instance, after completing a port and upstreaming the changes, a project may just point to the upstream community.</p>
 <p>The majority of BlackBerry-led projects are licensed under ASL2 (wikipedia, Apache); but some may use other licenses like LGPL or MIT. The license in BlackBerry-sponsored projects vary depending on their goal; for instance porting projects will follow the same license as their upstream communities.
