--- a/web_php.html
+++ b/web_php.html
@@ -28,6 +28,22 @@ title: Web - PHP
 </p>
 
 <h3><a name="complete"></a>Complete Apps</h3>
+<p><a name="Drupal4OK"></a><h5>Help4OK</h5><p>Connect people who need help with people who can give help.</p>
+
+<p>On May 20, 2013, a tornado devastated Moore, Oklahoma. The next day volunteers at Drupalcon Portland reached out to FEMA to find out how we could help. Within 24 hours 100 volunteers contributed to the Drupal for Oklahoma, #Drupal4OK, effort and launched Help4OK.org. The site connects people who need housing with people who can offer housing and people who need a ride with people who can offer rides. In the week after the tornado, people in the affected area have requested similar new features:</p>
+<ul>
+<li>Project cleanup assistance: Connect people who need help with cleanup with volunteers who are able to help.</li>
+<li>Equipment availability: Connect those people who need cleanup equipment (bobcat, backhoe, etc.) with people who have special equipment that could be borrowed or rented.</li></ul>
+<p>Right now there are two parallel works in progress on this project:
+<ol>
+<li>1 Help - Using help4ok.org as a proof-of-concept, incorporating feedback we've received from users and disaster response experts, we're working to make a Drupal distributionthat makes it fast and easy to set up and extend sites like help4ok.org.</li>
+
+<li>2 www.help4ok.org - This website is still actively in use supporting survivors and volunteers in the aftermath of the tornado in Moore, OK.</li>
+</ol>
+
+<strong>Link:</strong> <a href="https://github.com/bryanhirsch/Drupal4OK">https://github.com/bryanhirsch/Drupal4OK</a><br>
+<strong>Source:</strong> Third party
+</p>
 <p><a name="usa-faqs"></a><h5>USA.gov FAQs API &amp; Mobile App</h5>This app includes an importer/parser for the XML feed of FAQs from USA.gov (<a href="http://answers.usa.gov">answers.usa.gov</a>) as well as a RESTful API interface and a mobile HTML5 UI based on that API.
 A working demo of this codebase can be seen at <a href="http://usa-faq.civicagency.org">http://usa-faq.civicagency.org</a> and the API documentation can be seen at <a href="http://usa-faq.civicagency.org/api">http://usa-faq.civicagency.org/api</a>.
 <br>
