--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@ title: Home
 	</div>
 	<div class="clear">&nbsp;<br></div>
 	<div>
-		<div class="one_third greydient" style="height: 240px; overflow: hidden; ">
+		<div class="one_third greydient" style="height: 265px; overflow: hidden; ">
 			<div>
 				<h4>Mobile Web</h4>
 				<p>Frameworks and modular code for:
 				<ul>
 					<li><a href="web_html.html">HTML/CSS/JS</a></li>
+					<li><a href="web_coldfusion.html">ColdFusion</a></li>
 					<li><a href="web_jsp.html">JSP</a></li>
 					<li><a href="web_php.html">PHP</a></li>
 					<li><a href="web_python.html">Python</a></li>
@@ -31,7 +32,7 @@ title: Home
 				<!--<div class="button small right"><a target="_self" class="button white" href="/dsic/join-in">Join Us!</a></div>-->
 			</div>
 		</div>
-		<div class="one_third greydient" style="height: 240px; overflow: hidden; ">
+		<div class="one_third greydient" style="height: 265px; overflow: hidden; ">
 			<div>
 				<h4>Native Apps</h4>
 				<p>Modular code and complete apps for:
@@ -45,7 +46,7 @@ title: Home
 		    		<!-- <div class="button small right"><a target="_self" class="button white" href="/dsic/get-it-done/">Read More</a></div>-->
 			</div>
 		</div>
-		<div class="one_third last greydient" style="height: 240px; overflow: hidden; ">
+		<div class="one_third last greydient" style="height: 265px; overflow: hidden; ">
 			<div>
 							<h4>Other Resources</h4>
 				<p><!--Modular code and complete apps for:-->
