Added contributions from DOD and USGS

--- a/native_ios.html
+++ b/native_ios.html
@@ -35,16 +35,57 @@ title: Native iOS
 </p>
 
 <h3><a name="complete"></a>Complete Apps</h3>
+
+<p><a name="Breathe2Relax-ios"></a><h5>Breathe2Relax</h5>A portable stress management app for Android and iOS. Built on the iPhone mobile app platform, Breathe2Relax is a hands-on diaphragmatic breathing exercise. Breathing exercises have been documented to decrease the body's 'fight-or-flight' (stress) response, and help with mood stabilization, anger control, and anxiety management. Breathe2Relax can be used as a stand-alone stress reduction tool, or can be used in tandem with clinical care directed by a healthcare worker.
+<br>
+Capitalizing on touch-screen technology, a user can record their stress level on a 'visual analogue scale' by simply swiping a small bar to the left or to the right. Breathe2Relax uses state-of-the-art graphics, animation, narration, and videos to deliver a sophisticated, immersive experience for the user.<br>
+<strong>Link:</strong> <a href="https://github.com/t2health/Breathe2Relax-ios">https://github.com/t2health/Breathe2Relax-ios</a><br>
+<strong>Source:</strong> Federal
+</p>
+
+<p><a name="Co-Occurring-Conditions-Toolkit-iOS"></a><h5>Co-occurring Conditions Toolkit (CCT)</h5>The Co-occurring Conditions Toolkit (CCT) is a HTML5 Android and iOS mobile application for smart phones and tablet devices is an electronic version of the familiar Co-occurring Conditions Toolkit published by the Defense Centers of Excellence (DCoE) for Psychological Health and Traumatic Brain Injury (mTBI).<br>
+<strong>Link:</strong> <a href="https://github.com/t2health/Co-Occurring-Conditions-Toolkit-iOS">https://github.com/t2health/Co-Occurring-Conditions-Toolkit-iOS</a><br>
+<strong>Source:</strong> Federal
+</p>
+
 <p><a name="DOL-Timesheet"></a><h5>DOL Timesheet</h5>This is a timesheet to record the hours that you work and calculate the amount you may be owed by your employer. It also includes overtime pay calculations at a rate of one and one-half times (1.5) the regular rate of pay for all hours you work over 40 in a workweek. This DOL-Timesheet does not handle items such as tips, commissions, bonuses, deductions, holiday pay, pay for weekends, shift differentials, or pay for regular days of rest.<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/DOL-Timesheet">https://github.com/USDepartmentofLabor/DOL-Timesheet</a><br>
 <strong>Source:</strong> Federal
 </p>
+
 <p><a name="LaborStats-iOS"></a><h5>LaborStats</h5>Get the latest economic indicators from the Bureau of Labor Statistics &amp; the Employment Training Administration.<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/LaborStats-iOS">https://github.com/USDepartmentofLabor/LaborStats-iOS</a><br>
 <strong>Source:</strong> Federal
 </p>
+
+<p><a name="LifeArmor-iOS"></a><h5>LifeArmor</h5>This Android and iOS app allows the user to browse information on 17 topics, including sleep, depression, relationship issues, and post-traumatic stress. Brief self-assessments help the user measure and track their symptoms, and tools are available to assist with managing specific problems. Videos relevant to each topic provide personal stories from other service members, veterans, and military family members.<br>
+<strong>Link:</strong> <a href="https://github.com/t2health/LifeArmor-iOS">https://github.com/t2health/LifeArmor-iOS</a><br>
+<strong>Source:</strong> Federal
+</p>
+
+<p><a name="mTBI-Toolkit-iOS"></a><h5>Mild Traumatic Brain Injury Pocket Guide</h5>The Mild Traumatic Brain Injury Pocket Guide HTML5 mobile iOS and native Android application for health care providers gives instant access to a comprehensive quick-reference guide on improving care for mTBI patients. Designed to reflect current clinical standards of care, the mTBI Pocket Guide mobile application can help you improve quality of care and clinical outcomes for patients.
+<br>
+Military and civilian physicians, physician assistants, nurse practitioners, and related treatment and therapy providers can use the application to find information on assessing, treating, and managing common symptoms of mTBI patients<br>
+<strong>Link:</strong> <a href="https://github.com/t2health/mTBI-Toolkit-iOS">https://github.com/t2health/mTBI-Toolkit-iOS</a><br>
+<strong>Source:</strong> Federal
+</p>
+
 <p><a name="OSHA-Heat-Safety-iOS"></a><h5>OSHA Heat Safety</h5>This app allows workers and supervisors to calculate the heat index for their worksite, and, based on the heat index, displays a risk level to outdoor workers.<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/OSHA-Heat-Safety-iOS">https://github.com/USDepartmentofLabor/OSHA-Heat-Safety-iOS</a><br>
+<strong>Source:</strong> Federal
+</p>
+
+<p><a name="PECoach-ios"></a><h5>PE Coach</h5>PE Coach is the first mobile app designed to support the tasks associated with prolonged exposure treatment for PTSD. Providing hip-pocket access to the necessary tools for successful PE participation, the app includes audio recording capability for easy playback after sessions; tools to support patient tasks between sessions; and visual displays of symptom reduction over time.In addition, PE Coach is integrated with smartphone calendar functionality to encourage patient recall and session attendance.
+<br>
+PE Coach will help providers and patients overcome certain barriers to PE implementation, dissemination, and adherence. For a free download, log on to the Apple App Store or Android Market.<br>
+<strong>Link:</strong> <a href="https://github.com/t2health/PECoach-ios">https://github.com/t2health/PECoach-ios</a><br>
+<strong>Source:</strong> Federal
+</p>
+
+<p><a name="ProviderResilience-iOS"></a><h5>Provider Resilience</h5>An Android and iOS app which gives health care providers tools to guard against burnout and compassion fatigue as they help service members, veterans, and their families.
+<br>
+Your responses to a short self-assessment create ratings of your risk for compassion fatigue, burnout, and secondary traumatic stress. These ratings can also be viewed as graphs so you can monitor them over time.<br>
+<strong>Link:</strong> <a href="https://github.com/t2health/ProviderResilience-iOS">https://github.com/t2health/ProviderResilience-iOS</a><br>
 <strong>Source:</strong> Federal
 </p>
 <p><a name="ptt-advisor"></a><h5>PTT Advisor</h5>CDC's PTT Advisor offers clinicians a tool to quickly select the appropriate follow-up tests to evaluate patients with a prolonged partial thromboplastin time (PTT) laboratory result and a normal prothrombin time (PT) laboratory result. PTT Advisor will run on your iPhone, iPod touch or iPad. PTT Advisor has been created by CDC in collaboration with experts in diagnostic coagulation with a collective experience of more than 50 years in the field.  More information about this app can be found at <a href="http://www.phiresearchlab.org/ptt/">its support page</a>.<br>
@@ -55,6 +96,16 @@ title: Native iOS
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/StrategyTrackeriPad">https://github.com/USDepartmentofLabor/StrategyTrackeriPad</a><br>
 <strong>Source:</strong> Federal
 </p>
+
+<p><a name="T2-Mood-Tracker-iOS"></a><h5>T2 Mood Tracker</h5>An Android and iOS mobile application that allows users to self-monitor, track and reference their emotional experience over a period of days, weeks and months using a visual analogue rating scale.
+<br>
+Users can self-monitor emotional experiences associated with common deployment-related behavioral health issues like post-traumatic stress, brain injury, life stress, depression and anxiety. Additional rating can also be added. With each self-rating, notes on environmental influences on emotional experiences can be added. Self-monitoring results can be a self-help tool or they can be shared with a therapist or health care professional, providing a record of the patient’s emotional experience over a selected time frame.
+<br>
+T2 Mood Tracker received first place in the "General Wellness" category during the Apps4Army (A4A) competition.<br>
+<strong>Link:</strong> <a href="https://github.com/t2health/T2-Mood-Tracker-iOS">https://github.com/t2health/T2-Mood-Tracker-iOS</a><br>
+<strong>Source:</strong> Federal
+</p>
+
 <p><a name="usagov-ios-app"></a><h5>USA.gov</h5>The USA.gov iOS mobile application allows you to:</p>
 <p><ul>
 <li>Search tens of millions of web pages from federal, state, local, territorial, and tribal governments and to contact your government by phone or email.</li>
