Replaced NPS fork of Leaflet with the official repository.

--- a/web_html.html
+++ b/web_html.html
@@ -45,9 +45,9 @@ title: HTML5
 <strong>Link:</strong> <a href="https://github.com/jquery/jquery-mobile">https://github.com/jquery/jquery-mobile</a><br>
 <strong>Source:</strong> Third party
 </p>
-<p><a name="Leaflet"></a><h5>Leaflet</h5>Leaflet is a modern open-source JavaScript library for mobile-friendly interactive maps. It is developed by Vladimir Agafonkin of CloudMade with a team of dedicated contributors. Weighing just about 27 KB of gzipped JS code, it has all the features most developers ever need for online maps.<br>
-<strong>Link:</strong> <a href="https://github.com/nationalparkservice/Leaflet">https://github.com/nationalparkservice/Leaflet</a><br>
-<strong>Source:</strong> Federal
+<p><a name="Leaflet"></a><h5>Leaflet</h5>Leaflet is a modern open-source JavaScript library for mobile-friendly interactive maps. It is developed by Vladimir Agafonkin of CloudMade with a team of dedicated contributors. Weighing just about 27 KB of gzipped JS code, it has all the features most developers ever need for online maps. More info at <a href="http://leafletjs.com">http://leafletjs.com</a>.<br>
+<strong>Link:</strong> <a href="https://github.com/Leaflet/Leaflet">https://github.com/Leaflet/Leaflet</a><br>
+<strong>Source:</strong> Third party
 </p>
 <p><a name="wet-boew"></a><h5>Web Experience Toolkit (WET)</h5>Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities.
 The toolkit complies with the new Standards on Web Accessibility and Web Usability; the toolkit will also ease compliance with the Standard on Web Interoperability. WET is highly recommended for use on Government of Canada Websites.
