--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 		<div class="one_half headline">
 			<h2>Mobile Code Catalog</h2>
 		    <p><strong>Agencies sharing code to make mobile development easier</strong><br>Mobile isn't just the future, it's the new reality! Use this catalog to either jump-start your mobile project or save time and money using open source code from the federal government, other government entities, and third party projects.</p>
-			<p>The great thing about this catalog is that it's a living resource.  You can <a href="form.html">submit your open source code</a> for inclusion (federal agencies only, please).<iframe src="http://ghbtns.com/github-btn.html?user=gsa&repo=Mobile-Code-Catalog&type=fork&count=true"
+			<p>The great thing about this catalog is that it's a living resource.  You can <a href="http://www.digitalgov.gov/contact-us/">submit your open source code</a> for inclusion (federal agencies only, please).<iframe src="http://ghbtns.com/github-btn.html?user=gsa&repo=Mobile-Code-Catalog&type=fork&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20" align="right"></iframe>
 		</div>
 		<div class="one_half last">
@@ -58,7 +58,7 @@ title: Home
 					<li><a href="http://www.youtube.com/watch?v=sr0NeWFCQaI&list=UU5V8jrK77-8gsa9RL_taG9A&index=2">GitHub For Gov</a></li>
 				</ul>
 				</p>
-		    		<div class="button small right"><a target="_self" class="button white" href="form.html">Submit Your Code</a></div>
+		    		<div class="button small right"><a target="_self" class="button white" href="http://www.digitalgov.gov/contact-us/">Submit Your Code</a></div>
 			</div>
 		</div>
 	</div>
