Added commented item template.

--- a/native_ios.html
+++ b/native_ios.html
@@ -37,6 +37,12 @@ title: Native iOS
 <strong>Link:</strong> <a href="https://github.com/facebook/three20">https://github.com/facebook/three20</a><br>
 <strong>Source:</strong> Third party
 </p>
+<!-- <p><a name="name-without-spaces"></a><h5>Name (spaces allowed)</h5>Description.<br>
+<strong>Link:</strong> <a href="Put URL Here">Put URL Here too</a><br>
+<strong>Source:</strong> Specify Federal, Other Government, or Third party 
+</p>
+ -->
+
 
 <h3><a name="complete"></a>Complete Apps</h3>
 
